# partii-project

./: .gitignore  .prettierignore  Cargo.toml  Makefile  Makefile.shared  README.md  ocaml-variants.opam  package.sh
benchmarks/sandmark/benchmarks/decompress/: dune
benchmarks/sandmark/benchmarks/multicore-grammatrix/: dune
benchmarks/sandmark/benchmarks/numerical-analysis/: dune
benchmarks/sandmark/benchmarks/thread-lwt/: dune
benchmarks/sandmark/benchmarks/zarith/: dune
src/ocaml-jit-staticlib/: Cargo.toml
src/ocaml-jit-staticlib/src/: c_entrypoints.rs  configuration.rs  global_data.rs  interp.rs  lib.rs  trace.rs
src/ocaml-jit-staticlib/src/caml/: config.rs  domain_state.rs  fail.rs  memory.rs  misc.rs  mlvalues.rs  mod.rs  prims.rs
src/ocaml-jit-staticlib/src/compiler/: c_primitives.rs  emit_code.rs  mod.rs  saved_data.rs
src/ocaml-jit-staticlib/src/ffi/: domain_state.rs  misc.rs  mlvalues.rs  mod.rs
src/ocaml-jit-staticlib/src/interp/: code_preparation.rs  global_data.rs  interpreter.rs  loaded_code_lookup.rs  mod.rs
src/ocaml-jit-staticlib/src/interp/compiler/: mod.rs
src/ocaml-jit-tools/: Cargo.toml
src/ocaml-jit-tools/src/: disassembler.rs  hexdump.rs  main.rs  utils.rs
src/ocaml-jit-tools/src/bytecode_files/: bytecode.rs  error.rs  mod.rs  primitives.rs  trailer.rs
src/ocaml-jit-tools/src/commands/: compare_traces.rs  disassembler.rs  hexdump.rs  mod.rs  process_disassembly.rs
src/rust/: Cargo.toml  dis
src/rust/ocaml-jit-shared/: Cargo.toml
src/rust/ocaml-jit-shared/src/: call_trace.rs  instruction_trace.rs  lib.rs  opcodes.rs  primitives.rs  trace.rs
src/rust/ocaml-jit-shared/src/basic_blocks/: conversion.rs  mod.rs  types.rs
src/rust/ocaml-jit-shared/src/cranelift_codegen/: mod.rs  test.rs
src/rust/ocaml-jit-shared/src/cranelift_codegen/test_cases/stdlib_min/: closure.json  ir-after-codegen  ir-after-compile  objdump
src/rust/ocaml-jit-shared/src/cranelift_compiler/: mod.rs  primitives.rs  test.rs
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/arith_add/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/arith_div/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/arith_le/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/arith_mod/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/arith_neg/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/arith_not/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/arith_sub/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/arith_toplevel_t/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/arrays_failing/: closure.json
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/big_makeblock/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump  stack-maps
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/buffer_add_char/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump  stack-maps
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/calls/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump  stack-maps
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/clamp/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/closure/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump  stack-maps
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/format_convert_int/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump  stack-maps
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/intern_segfault/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump  stack-maps
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/list_iter/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump  stack-maps
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/makeblock_internalformat_make_int_padding_precision_anon/: closure-dump  closure.json  disasm  ir-after-codegen  ir-after-compile  objdump  stack-maps
src/rust/ocaml-jit-shared/src/cranelift_compiler/test_cases/min_fun/: closure-dump  closure.json  disasm  objdump  (+3 more)
src/rust/ocaml-jit-shared/src/instructions/: closure_scan.rs  mod.rs  parse.rs  types.rs
src/rust/ocaml-jit-staticlib/: Cargo.toml
src/rust/ocaml-jit-staticlib/src/: c_entrypoints.rs  configuration.rs  global_data.rs  jit_test.rs  lib.rs  trace.rs
src/rust/ocaml-jit-staticlib/src/caml/: domain_state.rs  misc.rs  mlvalues.rs
src/rust/ocaml-jit-staticlib/src/compiler/: c_primitives.rs  emit_code.rs  mod.rs  optimised_compiler.rs  rust_primitives.rs  saved_data.rs
src/rust/ocaml-jit-tools/: Cargo.toml
src/rust/ocaml-jit-tools/src/: main.rs
src/rust/ocaml-jit-tools/src/bytecode_files/: bytecode.rs  debug_events.rs  error.rs  ml_data.rs  mod.rs  primitives.rs  symbol_table.rs  trailer.rs
src/rust/ocaml-jit-tools/src/commands/: compare_call_traces.rs  compare_instruction_traces.rs  compare_traces.rs  disassembler.rs  hexdump.rs  mod.rs  process_disassembly.rs
src/rust/ocaml-jit-tools/src/commands/clever_dis/: data.rs  llvm_codegen.rs  mod.rs  parsing.rs  ssa.rs  visualisation.rs  vizualisation.rs
src/rust/ocaml-jit-tools/src/commands/not_quite_so_clever_dis/: mod.rs  visualisation.rs
(+274 files in other folders)
