opam-version: "2.0"
version: "4.11.1+jit"
synopsis: "OCaml 4.11.1, JIT"
depends: [
  "ocaml" {= "4.11.1" & post}
  "base-unix" {post}
  "base-bigarray" {post}
  "base-threads" {post}
]
conflict-class: "ocaml-core-compiler"
flags: compiler
setenv: CAML_LD_LIBRARY_PATH = "%{lib}%/stublibs"
build: [
  [make "-j%{jobs}%" "OPAM_PREFIX=%{prefix}%" "opam_build"]
]
install: [make "opam_install"]
maintainer: "caml-list@inria.fr"
homepage: "https://github.com/ocaml/ocaml/"
bug-reports: "https://github.com/ocaml/ocaml/issues"
authors: [
  "Xavier Leroy"
  "Damien Doligez"
  "Alain Frisch"
  "Jacques Garrigue"
  "Didier Rémy"
  "Jérôme Vouillon"
  "Will Robson"
]
