[package]
name = "ocaml-jit-staticlib"
version = "0.1.0"
authors = ["Will Robson <will@willrobson.uk>"]
edition = "2018"
license = "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"

[lib]
crate_type = ["staticlib"]

[dependencies]
ocaml-jit-shared = { path = "../ocaml-jit-shared" }
once_cell = "1.4.1"
dynasm = "1.0.0"
dynasmrt = "1.0.0"