[package]
name = "ocaml-jit-tools"
version = "0.1.0"
authors = ["Will Robson <will@willrobson.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
ocaml-jit-shared = { path = "../ocaml-jit-shared" }
pretty-hex = "0.2"
prettytable-rs = "0.8"
colored = "2"
byteorder = "1.3.4"
thiserror = "1.0"
serde_json = "1.0"
os_pipe = "0.9"

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.18.0"