[workspace]

members = [
    "ocaml-jit-staticlib",
    "ocaml-jit-shared",
    "ocaml-jit-tools",
] # standalone tools (dissasembler, hex dump) for bytecode files and testing the JIT

[profile.release]
lto = true
debug-assertions = true # while testing


[patch.crates-io]
regalloc = { path = "../../vendor/regalloc-0.0.31" }
