[package]
name = "ocaml-jit-shared"
version = "0.1.0"
authors = ["Will Robson <will@willrobson.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = {version = "1.0", features = ["derive"]}
colored = "2"
