[package]
name = "ocaml-jit-shared"
version = "0.1.0"
authors = ["Will Robson <will@willrobson.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
colored = "2"
strum = "0.20"
strum_macros = "0.20"
cranelift = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "90aa5cf" }
cranelift-codegen = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "90aa5cf", features = ["x64"] }
cranelift-module = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "90aa5cf" }
anyhow = "1.0"
itertools = "0.10"

[dev-dependencies]
expect-test = "1.1"
serde_json = "1.0"
cranelift-object = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "90aa5cf" }
tempfile = "3.2"
env_logger = "0.8"
