[package]
name = "ocaml-jit-staticlib"
version = "0.1.0"
authors = ["Will Robson <will@willrobson.uk>"]
edition = "2018"
license = "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"

[lib]
crate_type = ["staticlib"]

[dependencies]
ocaml-jit-shared = { path = "../ocaml-jit-shared" }
once_cell = "1.4.1"
dynasm = "1.0.0"
dynasmrt = "1.0.0"
clap = "2.33"
structopt = "0.3"
shell-words = "1.0.0"
serde_json = "1.0"
default-env = "0.1.1"

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
features = ["llvm11-0"]
