[package]
name = "ocaml-jit-staticlib"
version = "0.1.0"
authors = ["Will Robson <will@willrobson.uk>"]
edition = "2018"
license = "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"

[lib]
crate_type = ["staticlib"]

[dependencies]
ocaml-jit-shared = { path = "../ocaml-jit-shared" }
once_cell = "1.4.1"
dynasmrt = { path = "../../../vendor/dynasm-rs/runtime" }
clap = "2.33"
structopt = "0.3"
shell-words = "1.0.0"
serde_json = "1.0"
default-env = "0.1.1"
cranelift-jit = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "90aa5cf" }
cranelift-native = { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "90aa5cf" }
