(executable
 (name test_decompress)
  (modules test_decompress)
  (libraries bigstringaf checkseum.ocaml decompress.zl)
  (modes byte exe))

(executable
 (name test_decompress_multicore)
  (modules test_decompress_multicore)
  (libraries bigstringaf checkseum.ocaml decompress.zl))

(alias (name buildbench)
       (deps test_decompress.exe))
(alias (name buildbench_byte) (deps test_decompress.bc))
(alias (name multibench_parallel)
       (deps test_decompress.exe test_decompress_multicore.exe))
