(executable (name zarith_fact) (modules zarith_fact) (libraries zarith) (modes byte exe))
(executable (name zarith_fib) (modules zarith_fib) (libraries zarith num) (modes byte exe))
(executable (name zarith_pi) (modules zarith_pi) (libraries zarith) (modes byte exe))
(executable (name zarith_tak) (modules zarith_tak) (libraries zarith num) (modes byte exe))

(alias (name buildbench) (deps zarith_fact.exe zarith_fib.exe zarith_pi.exe zarith_tak.exe))
(alias (name buildbench_byte) (deps zarith_fact.bc zarith_fib.bc zarith_pi.bc zarith_tak.bc))
